<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <View
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/item1"

            app:layout_constraintTop_toTopOf="parent"
    />


    <TextView
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#333333"
            app:layout_constraintTop_toTopOf="@+id/item1"
            app:layout_constraintBottom_toBottomOf="@+id/item1"
            app:layout_constraintStart_toStartOf="@+id/item1"
            android:id="@+id/textView"/>
    <Switch
            android:id="@+id/mIdSkipSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:layout_constraintTop_toTopOf="@+id/item1"
            app:layout_constraintBottom_toBottomOf="@+id/item1"
            app:layout_constraintEnd_toEndOf="@+id/item1"
            android:layout_marginEnd="16dp"
    />
    <View android:layout_width="match_parent" android:layout_height="56dp"
          app:layout_constraintTop_toBottomOf="@+id/item1"
          android:background="?attr/selectableItemBackground"
          android:id="@+id/item2"
          android:visibility="gone"
    />

    <TextView
            android:text="@string/mute_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/item2"
            app:layout_constraintBottom_toBottomOf="@+id/item2"
            app:layout_constraintStart_toStartOf="@+id/item2"
            android:id="@+id/textView2"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/item2"
            app:layout_constraintBottom_toBottomOf="@+id/item2"
            app:layout_constraintEnd_toEndOf="@+id/item2"
            android:layout_marginEnd="16dp"
            android:id="@+id/mIdMuteSwitch"
    />

    <View android:layout_width="match_parent"
          app:layout_constraintTop_toBottomOf="@+id/item1"
          android:layout_height="0.5dp"
          android:visibility="gone"
          android:background="?attr/dividerHorizontal"
    />
    <View android:layout_width="match_parent"
          app:layout_constraintTop_toBottomOf="@+id/item2"
          android:layout_height="0.5dp"
          android:background="?attr/dividerHorizontal"
    />

    <ImageView android:layout_width="16dp" android:layout_height="16dp"
    app:layout_constraintTop_toTopOf="@+id/mIdState"
               android:src="@drawable/error"
               android:id="@+id/img"
               android:visibility="gone"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="16dp"
               app:layout_constraintBottom_toBottomOf="@+id/mIdState"
    />

    <TextView
            android:id="@+id/mIdState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/item1"
            android:textColor="#FF5252"
            android:visibility="gone"
            android:layout_marginStart="4dp"
            android:text="@string/permission_off"
            app:layout_constraintStart_toEndOf="@+id/img"
    />

    <android.support.constraint.Group
            android:id="@+id/mIdStateGroup"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      app:constraint_referenced_ids="img,mIdState"
    />
    <Button
            android:text="@string/open_youtube"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item2"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:background="#536DFE"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="140dp"
            tools:layout_editor_absoluteX="28dp" android:id="@+id/button"/>

    <Button
            android:text="@string/manage_service"
            app:layout_constraintTop_toBottomOf="@+id/item2"
            android:layout_marginTop="32dp"
            android:layout_marginStart="36dp"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:background="#536DFE"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/button"/>


    <TextView
            android:text="@string/n_n"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="12dp"
            android:textColor="#2196F3"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginTop="64dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"/>
    <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:textColor="#d4d4d4"
            android:text="@string/developed_by_"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>